fixed whitespace bug

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,10 @@ $desktop: 1280px;
 @import './education';
 @import './connect';
 
+html {
+  overflow-x: hidden !important;
+}
+
 body {
   color: white;
   font-family: 'Ubuntu', serif;
